--- a/www/index.html
+++ b/www/index.html
@@ -6,16 +6,20 @@
     <title>Toothless</title>
 
     <link rel="shortcut icon" href="assets/img/toothless.jpg" type="image/x-icon">
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <!-- Particle js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
-    <!-- Texllate -->
+    <!-- Texillate js -->
     <link rel="stylesheet" href="assets/vendore/texllate/animate.css">
+
+
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -54,6 +58,8 @@
         crossorigin="anonymous"></script>   
     
     <!-- Particle js -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
     <script src="script.js"></script>
 
     <!-- Textillate js -->
