--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,8 @@
                 </div>
                 <h5 class="text-light text-center"><span class="text">Ask me anything</span></h5>
 
-    <div class="col-md-1"></div>
+            </div>
+            <div class="col-md-1"></div>
         </div>
     </section>
 
@@ -68,6 +69,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textillate/0.4.0/jquery.textillate.min.js"></script>
     
     <script src="main.js"></script>
-    <script src="/eel.js"> </script>
+    <script src="/eel.js" onerror="console.log('Eel not loaded - run via Python main.py')"></script>
 </body>
 </html>
