--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="container">
 
-        <section id="Oval" class="mb-4" hidden>
+        <section id="Oval" class="mb-4">
 
         <div class="row">
             <div class="col-md-1"></div>
@@ -66,7 +66,7 @@
         </div>
         </section>
 
-        <section id="SiriWave" class="mb-4">
+        <section id="SiriWave" class="mb-4" hidden>
 
             <div class="container">
                 <div class="row">
