--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
 
                 <div class="col-md-12 mt-4 pt-4">
                     <div class="text-center">
-                        <div id="text-input" class="d-flex">
+                        <div id="TextInput" class="d-flex justify-content-center align-items-center">
 
                             <input type="text" class="input-field" id="chatbox" placeholder="type here ... ">
                             <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
