Add speech recognition and command functionality; update .gitignore and HTML structure

--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/textillate/0.4.0/jquery.textillate.min.js"></script>
     
     <script src="main.js"></script>
+    <script src="controller.js"></script>
 
     <script src="/eel.js" onerror="console.log('Eel not loaded - run via Python main.py')"></script>
 </body>
