--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
                     <div class="col-md-12">
                         <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
                             <div class="">
-                                <p class="text-start text-light mb-4 siri-message">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia, suscipit aliquid! Veniam reiciendis!</p>
+                                <p class="text-start text-light mb-4 siri-message">Rooarr! Toothless, this is...</p>
                                 <div id="siri-container"></div>
                             </div>
 
