--- a/www/index.html
+++ b/www/index.html
@@ -74,6 +74,9 @@
                         <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
                             <div class="">
                                 <p class="text-start text-light mb-4 siri-message">Rooarr! Toothless, this is...</p>
+                                <div class="text-center mb-3">
+                                    <button id="BackBtn" class="btn btn-outline-light btn-sm">Back</button>
+                                </div>
                                 <div id="siri-container"></div>
                             </div>
 
